<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:text="@string/assesment"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="1dp"
            android:background="@color/black" />


        <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/calls_card_cell"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-10sp"
            android:elevation="5dp"
            card_view:cardBackgroundColor="#424240"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="6dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_state"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/ic_sentiment_very_satisfied"
                    android:tint="@android:color/holo_green_light" />

                <LinearLayout
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/state_safe_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingTop="4dp"
                        android:text="@string/you_are_safe"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/assesment_button"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:padding="4dp"
                        android:text="@string/take_assesment"
                        app:chipBackgroundColor="#2196F3" />

                </LinearLayout>


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextAssesment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your next Assesment is at 9:15"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:text="@string/previous_assesments"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="1dp"
            android:background="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/assesment_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />


    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>